syntax = "proto3";
package gen_druid_spec;

option go_package = "github.com/nguyensinhtu/protoc-gen-druid-spec/protos";

import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";

// dimensionsSpec
// Druid applies ingestion spec components in a particular order: first flattenSpec (if any), 
// then timestampSpec, then transformSpec, and finally dimensionsSpec and metricsSpec
message DruidDimensionFieldOptions {
  string multi_value_handling = 2;

  google.protobuf.BoolValue create_bitmap_index = 3; 
}

// flattenSpec
message DruidFlattenFieldOptions {
  string prefix = 1;
  // type will be jq or path
  string type = 2;

  // don't include current field name to output flatten name
  bool ignore_name = 3;

  string output_name = 4;
}

message DruidMetricFieldOptions {
  string metric_name = 1;
  int64 size = 2;
  string type = 3;
  bool is_input_theta_sketch = 4;
}

// timestampSpec
message DruidTimestampFieldOptions {
  string format = 1;
  string missing_value = 2;
} 

message DruidSpecFieldOptions {
  DruidDimensionFieldOptions dimension = 1;
  DruidFlattenFieldOptions flatten = 2;
  DruidTimestampFieldOptions timestamp = 3;
  DruidMetricFieldOptions metric = 4;
  bool ignore = 5; 
}

extend google.protobuf.FieldOptions {
  DruidSpecFieldOptions spec = 2021;
}